--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
 }
 
 test {
@@ -48,4 +48,10 @@ test {
 
 application {
     mainClassName = "com.vaadin.starter.skeleton.Main"
+    // we are going really low-level here.
+    applicationDefaultJvmArgs = ['--add-opens java.base/java.lang=ALL-UNNAMED', '--add-opens java.base/jdk.internal.vm=ALL-UNNAMED']
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
