--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,8 +7,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        java: [17]
+        os: [ubuntu-latest]
+        java: [20]
 
     runs-on: ${{ matrix.os }}
 
