--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,11 @@ application {
 tasks.withType(JavaCompile) {
     options.compilerArgs += "--enable-preview"
 }
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/jdk.internal.vm=ALL-UNNAMED"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/jdk.internal.vm=ALL-UNNAMED'
+}
