--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,17 +8,18 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: [20]
+        java: [21]
+        distribution: [oracle, corretto]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: ${{ matrix.java }}
-        distribution: 'temurin'
+        distribution: ${{ matrix.distribution }}
     - name: Cache Gradle packages
       uses: actions/cache@v2
       with:
@@ -28,4 +29,3 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', 'gradle/wrapper/gradle-wrapper.properties') }}
     - name: Build with Gradle
       run: ./gradlew clean build '-Pvaadin.productionMode' --stacktrace --info --no-daemon
-
