--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: [21]
+        java: [21, 22]
         distribution: [oracle, corretto, temurin]
 
     runs-on: ${{ matrix.os }}
@@ -21,7 +21,7 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: ${{ matrix.distribution }}
     - name: Cache Gradle packages
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: |
           ~/.gradle/caches
