--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-vaadin = "24.9.7"
+vaadin = "25.0.0"
 # https://repo1.maven.org/maven2/org/slf4j/slf4j-api/
 slf4j = "2.0.17"
 
@@ -7,10 +7,11 @@ slf4j = "2.0.17"
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 jetbrains-annotations = "org.jetbrains:annotations:24.1.0"
-vaadin-boot = "com.github.mvysny.vaadin-boot:vaadin-boot:13.5"
+vaadin-boot = "com.github.mvysny.vaadin-boot:vaadin-boot:13.6"
 vaadin-core = { module = "com.vaadin:vaadin-core", version.ref = "vaadin" }
+vaadin-dev = { module = "com.vaadin:vaadin-dev", version.ref = "vaadin" }
 junit-jupiter-engine = "org.junit.jupiter:junit-jupiter-engine:6.0.1"
-kaributesting = "com.github.mvysny.kaributesting:karibu-testing-v24:2.4.3"
+kaributesting = "com.github.mvysny.kaributesting:karibu-testing-v24:2.6.1"
 
 [plugins]
 vaadin = { id = "com.vaadin", version.ref = "vaadin" }
